<resources>
    <string name="app_name">AlkaTV</string>

    <!-- Strings related to login/registration -->
    <string name="prompt_mobile">Mobile No</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="action_login_button">Login</string>
    <string name="action_register_button">Register</string>
    <string name="action_register_link">Don`t have an account ? Register here !</string>
    <string name="error_invalid_mobNo">This Mobile Number is incorrect</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_name">This name is too short , please enter minimum 5 characters</string>
    <string name="error_field_required">This field is required</string>
    <string name="progress_dialog_msg">Processing ...</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="default_toast_message">"Backend Service is unavailable , please try after some time or contact ADMIN"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_send_feedback">Send Feedback</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
